llvm-toolchain-14 (1:14.0.6-18) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * Disable tests on mips64el
  * Fix compiler-rt hack on 32bit architectures

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 06 Mar 2024 08:43:25 +0100

llvm-toolchain-14 (1:14.0.6-17) unstable; urgency=medium

  * Disable compiler-rt on 32bit architectures except i386

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 03 Mar 2024 12:17:22 +0100

llvm-toolchain-14 (1:14.0.6-16.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Rename libraries for 64-bit time_t transition.  Closes: #1062910

 -- Graham Inggs <ginggs@debian.org>  Wed, 28 Feb 2024 21:47:14 +0000

llvm-toolchain-14 (1:14.0.6-16) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * also apply the wasm build fix

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 08 Sep 2023 00:41:35 +0200

llvm-toolchain-14 (1:14.0.6-15) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Strip -fcf-protection for wasm build - new flag added in dpkg 1.22

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 07 Sep 2023 11:25:23 +0200

llvm-toolchain-14 (1:14.0.6-14) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * Fixup typo in spirv detection

  [ Samuel Henrique ]
  * Explicitly depend on libcurl4-openssl-dev,
    since nss is being removed. (Closes: #1043550)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 07 Sep 2023 01:39:17 +0200

llvm-toolchain-14 (1:14.0.6-13) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Don't run chrpath for libclang on powerpc and powerpcspe

  [ Gianfranco Costamagna ]
  * Fix build with newer cmake and gcc-13 (Closes: #1037759)

  [ Nishit Majithia ]
  * SECURITY UPDATE: canonicalize pass crashed with segmentation fault
    - debian/patches/CVE-2023-29932.patch: Use default attributes for
      intrinsics
    - CVE-2023-29932
  * SECURITY UPDATE: convert-scf-to-spirv Pass crashed with segmentation
    fault